--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: java
 
-mvn install
-mvn sonar:sonar \
-  -Dsonar.projectKey=HeyChef_Ecommerce \
-  -Dsonar.organization=heychef-github \
-  -Dsonar.host.url=https://sonarcloud.io \
-  -Dsonar.login=0511c56f47cf52740215000a6418235e32503346
+install :
+ - mvn install
+ - mvn sonar:sonar -SONAR_PROJECT_KEY=HeyChef_Ecommerce -SONAR_ORGANIZATION=heychef-github -SONAR_HOST=https://sonarcloud.io -SONAR_LOGIN=0511c56f47cf52740215000a6418235e32503346
