--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,4 @@ language: java
 
 install :
  - mvn install
- - mvn sonar:sonar \
-  -Dsonar.projectKey=HeyChef_Ecommerce \
-  -Dsonar.organization=heychef-github \
-  -Dsonar.host.url=https://sonarcloud.io \
-  -Dsonar.login=b1af5715c8497426b32d0b8fbeaadef69649c536
+ - mvn sonar:sonar -Dsonar.projectKey=HeyChef_Ecommerce -Dsonar.organization=heychef-github -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=b1af5715c8497426b32d0b8fbeaadef69649c536
